# docker-tags

./: .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: test_fetch_tags.rs
