[package]
name = "docker-tags"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["color", "derive", "help", "std"] }
regex = { version = "1.12", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
shellexpand = "3.1"
tokio = { version = "1.48", default-features = false, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rusty-hook = { version = "0.11", default-features = false }
